--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "react": "18.2.0",
     "react-native": "0.71.14",
     "react-native-macos": "^0.71.36"
@@ -24,6 +25,7 @@
     "@types/react": "^18.2.47",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.10",
