--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.11",
     "@types/react": "^18.2.47",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.2.1",
