--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.11",
     "@types/react": "^18.2.47",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -39,6 +40,7 @@
     "jest": "^29.7.0",
     "metro-react-native-babel-preset": "0.73.10",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.3.3"
   },
